--- a/movo_tutorials/movo_object_search/config/yaml/regions_info.yaml
+++ b/movo_tutorials/movo_object_search/config/yaml/regions_info.yaml
@@ -1,4 +1,9 @@
 region_0: {
-  position: [5.5, 3.5],
+  position: [2.0, 0.0],
   orientation: [0.0, 0.0, 0.0, 1.0]
 }
+
+# region_1: {
+#   position: [1.0, 0.0],
+#   orientation: [0.0, 0.0, 0.0, 1.0]
+# }
