--- a/movo_tutorials/movo_pick_place/cfg/SphericalGrasp.cfg
+++ b/movo_tutorials/movo_pick_place/cfg/SphericalGrasp.cfg
@@ -7,10 +7,10 @@ gen = ParameterGenerator()
 
 gen.add("grasp_postures_frame_id", str_t, 0,
         "pre_grasp_posture and grasp_posture frame_id, usually the tool (previous to the gripper)",
-        "arm_tool_link")
+        "right_gripper_base_link")
 
 gen.add("gripper_joint_names", str_t, 0, "gripper joint names",
-        "gripper_left_finger_joint gripper_right_finger_joint")
+        "right_gripper_finger1_joint")
 gen.add("gripper_pre_grasp_positions", str_t, 0,
         "gripper pre_grasp joint positions (same order than joint_names)",
         "0.05 0.05")
