--- a/movo_tutorials/movo_pick_place/config/pick_and_place_params.yaml
+++ b/movo_tutorials/movo_pick_place/config/pick_and_place_params.yaml
@@ -50,4 +50,6 @@ max_degrees_pitch: 360
 step_degrees_pitch: 15
 step_degrees_yaw: 15
 
-links_to_allow_contact: ["right_gripper_base_link", "right_gripper_finger1_knuckle_link", "right_gripper_finger2_knuckle_link", "right_gripper_finger3_knuckle_link"]
+links_to_allow_contact: ["right_gripper_base_link", "right_gripper_finger1_knuckle_link", "right_gripper_finger2_knuckle_link", 
+  "right_gripper_finger3_knuckle_link", "right_gripper_finger1_finger_tip_link", "right_gripper_finger2_finger_tip_link",
+  "right_gripper_finger3_finger_tip_link"]
