Add sim_action in movo_demos

--- a/movo_demos/CMakeLists.txt
+++ b/movo_demos/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS roslaunch)
 
 ## Declare a catkin package
 catkin_package()
+catkin_python_setup()
 
 roslaunch_add_file_check(launch)
 
