--- a/movo_demos/package.xml
+++ b/movo_demos/package.xml
@@ -11,6 +11,8 @@
     <buildtool_depend>catkin</buildtool_depend>
     
     <build_depend>roslaunch</build_depend>
+    <run_depend>moveit_python</run_depend>
+    <run_depend>simple_grasping</run_depend>
 
     <export>
     </export>
