Urgent push before reinstalling ubuntu

--- a/movo_demos/config/posture/pregrasp_motion.yaml
+++ b/movo_demos/config/posture/pregrasp_motion.yaml
@@ -7,11 +7,14 @@ play_motion:
               right_wrist_3_joint, right_wrist_spherical_1_joint, right_wrist_spherical_2_joint]
       points:
       - positions: [-0.6483785636711348, -2.2220535413101103, -1.6744495449612957, -1.020791257269023, 
-                  -2.348136748533003, -0.7757891718186869, 0.8633956223717627]
+                    -2.348136748533003, -0.7757891718186869, 0.8633956223717627]
         time_from_start: 0.0
       - positions: [-1.592143106351644, -1.2682645302862525, -1.6069327859991542, -0.11672929390885134, 
-                  -1.2163012214679183, -2.225841059515866, -1.7369341362049164]
+                    -1.2163012214679183, -2.225841059515866, -1.7369341362049164]
         time_from_start: 2.0
+      # - positions: [0.10905281335218309, -1.3679925520185723, -0.9295324002681395, -0.688499274693612, 
+      #               -0.8574883887507703, -1.6892896650461449, -0.8155545627861054]
+      #   time_from_start: 4.0
 
     pick_final_pose:
       joints: [linear_joint, right_shoulder_pan_joint, right_shoulder_lift_joint, right_arm_half_joint, 
