--- a/movo_tutorials/movo_pick_place/package.xml
+++ b/movo_tutorials/movo_pick_place/package.xml
@@ -14,10 +14,14 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
+  <build_depend>moveit_ros_perception</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>aruco_ros</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>moveit_visual_tools</build_depend>
   <build_depend>moveit_msgs</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
@@ -29,8 +33,13 @@
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>aruco_ros</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>moveit_visual_tools</run_depend>
   <run_depend>moveit_msgs</run_depend>
+  <run_depend>moveit_core</run_depend>
   <run_depend>moveit_commander</run_depend>
+  <run_depend>moveit_fake_controller_manager</run_depend>
+  <run_depend>moveit_ros_planning_interface</run_depend>
+  <run_depend>moveit_ros_perception</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
